<resources>
    <string name="app_name">Ngeli Builder</string>
    <string name="swahili_ngeli_quiz">Swahili Ngeli Quiz</string>
    <string name="score">Score: 0/0</string>
    <string name="question">Which noun class does this word belong to?</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next_question">Next Question</string>
</resources>